[package]
name = "rustws"
version = "0.1.0"
authors = ["mukul2"]
edition = "2018"

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
tokio-tungstenite = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
serde_json = "^1.0"

[features]
default = ["tokio", "serde"]
   
